--- a/main_doutorado.tex
+++ b/main_doutorado.tex
@@ -32,6 +32,7 @@
 \usepackage{longtable} %tabelas longas, para tabelas que ultrapassam uma pagina
 %\input{psfig.sty}
 
+\usepackage[inline]{enumitem}
 
 % ----------------- Para inserir codigo fonte de linguagens de programacao no documento -------------
 \usepackage{listings}
