--- a/ref.bib
+++ b/ref.bib
@@ -1,5 +1,337 @@
-@MISC{ref1,
-  author        = "Nome do Autor",
-  title         = "Titulo",
-  year          = "2006"
+@article{shim2014decision,
+  title={Decision support of bad player identification in moba games using pagerank based evidence accumulation and normal distribution based confidence interval},
+  author={Shim, Jae Youn and Kim, Tae Hyun and Kim, Seong Whan},
+  journal={International Journal of Multimedia \& Ubiquitous Engineering},
+  volume={9},
+  number={8},
+  pages={13--16},
+  year={2014}
+}
+
+@inproceedings{shores2014identification,
+  title={The identification of deviance and its impact on retention in a multiplayer game},
+  author={Shores, Kenneth B and He, Yilin and Swanenburg, Kristina L and Kraut, Robert and Riedl, John},
+  booktitle={Proceedings of the 17th ACM conference on Computer supported cooperative work \& social computing},
+  pages={1356--1365},
+  year={2014},
+  organization={ACM}
+}
+
+@inproceedings{blackburn2014stfu,
+ author = {Blackburn, Jeremy and Kwak, Haewoon},
+ title = {STFU NOOB!: Predicting Crowdsourced Decisions on Toxic Behavior in Online Games},
+ booktitle = {Proceedings of the 23rd International Conference on World Wide Web},
+ series = {WWW '14},
+ year = {2014},
+ location = {Seoul, Korea},
+ pages = {877--888},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/2566486.2567987},
+ doi = {10.1145/2566486.2567987},
+ acmid = {2567987},
+ publisher = {ACM}
+} 
+
+@inproceedings{kwak2014linguistic,
+  title={Linguistic Analysis of Toxic Behavior in an Online Video Game},
+  author={Kwak, Haewoon and Blackburn, Jeremy},
+  booktitle={International Conference on Social Informatics},
+  pages={209--217},
+  year={2014},
+  organization={Springer}
+}
+
+@Online{newzoo1,
+  author = {NewZoo},
+  title = 	 {2016 Global Games Market Report},
+  year =	 2016,
+  url = {https://cdn2.hubspot.net/hubfs/700740/Reports/Newzoo_Free_2016_Global_Games_Market_Report.pdf}
+}
+
+@Online{newzoo2,
+  author = {NewZoo},
+  title = 	 {2017 Global eSport Market Report},
+  year =	 2017,
+  url = {https://newzoo.com/insights/trend-reports/global-esports-market-report-2017-light/}
+
+@Online{ifpi1,
+  author = {IFPI},
+  title = 	 {Global Music Report 2017},
+  year =	 2017,
+  url = {http://www.ifpi.org/downloads/GMR2017.pdf}
+}
+
+@Online{mpaa1,
+  author = {MPAA},
+  title = 	 {2016 Theatrical Market Statistics Report},
+  year =	 2017,
+  url= {http://www.mpaa.org/wp-content/uploads/2017/03/MPAA-Theatrical-Market-Statistics-2016_Final.pdf}
+}
+
+@Online{forbes1,
+  author = {Forbes},
+  title = 	 {New Report Details How eSports Is An Effective Engagement And Marketing Tool},
+  year =	 2017,
+  url = {https://www.forbes.com/sites/insertcoin/2015/02/25/new-report-details-how-esports-is-an-effective-engagement-and-marketing-too}
+}
+
+@Online{forbes1,
+  author = {Forbes},
+  title = 	 {New Report Details How eSports Is An Effective Engagement And Marketing Tool},
+  year =	 2017,
+  url = {https://www.forbes.com/sites/insertcoin/2015/02/25/new-report-details-how-esports-is-an-effective-engagement-and-marketing-too}
+}
+
+
+@Online{superdata1,
+  author = {Superdata},
+  title = 	 {Worldwide digital games market: 2015 total},
+  year =	 2016,
+  url = {http://www.superdataresearch.com}
+}
+
+
+@Online{riot1,
+  author = {Riot Games},
+  title = 	 {Our games},
+  year =	 2017,
+  url= {http://www.riotgames.com/our-games}
+}
+
+
+@Online{league1,
+  author = {League of Legends},
+  title = 	 {Game Info},
+  year =	 2017,
+  url = {http://gameinfo.na.leagueoflegends.com/en/game-info}
+}
+
+
+@INPROCEEDINGS{drachen2014skill,
+  title={Skill-based differences in spatio-temporal team behaviour in defence of the ancients 2 (dota 2)},
+  author={Drachen, Anders and Yancey, Matthew and Maguire, John and Chu, Derrek and Wang, Iris Yuhui and Mahlmann, Tobias and Schubert, Matthias and Klabajan, Diego},
+  BOOKTITLE={Games media entertainment (GEM), 2014 IEEE},
+  year={2014},
+  organization={IEEE}
+}
+
+@ARTICLE{rioult2014mining,
+  title={Mining tracks of competitive video games},
+  author={Rioult, Fran{\c{c}}ois and M{\'e}tivier, Jean-Philippe and Helleu, Boris and Scelles, Nicolas and Durand, Christophe},
+  journal={AASRI Procedia},
+  volume={8},
+  pages={82-87},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@inproceedings{drachen2011introducing,
+  title={Introducing Archetypal Analysis for Player Classification in Games},
+  author={Drachen, Anders and Thurau, C},
+  booktitle={Proceedings of the 2011 Foundations of Digital Games Conference, Epex 11 Workshop},
+  year={2011}
+}
+
+ 
+@inproceedings{yang2014identifying,
+  title={Identifying patterns in combat that are predictive of success in MOBA games.},
+  author={Yang, Pu and Harrison, Brent E and Roberts, David L},
+  booktitle={FDG},
+  year={2014}
+}
+ 
+@ARTICLE{ong2015player,
+  title={Player Behavior and Optimal Team Composition for Online Multiplayer Games},
+  author={Ong, Hao Yi and Deolalikar, Sunil and Peng, Mark},
+  journal={arXiv preprint arXiv:1503.02230},
+  year={2015}
+}
+
+@inproceedings{kim2017makes,
+  title={What Makes a Strong Team?: Using Collective Intelligence to Predict Team Performance in League of Legends.},
+  author={Kim, Young Ji and Engel, David and Woolley, Anita Williams and Lin, Jeffrey Yu-Ting and McArthur, Naomi and Malone, Thomas W},
+  booktitle={CSCW},
+  pages={2316--2329},
+  year={2017}
+}
+ 
+@book{zaki2014data,
+  title={Data mining and analysis: fundamental concepts and algorithms},
+  author={Zaki, Mohammed J and Meira Jr, Wagner and Meira, Wagner},
+  year={2014},
+  publisher={Cambridge University Press}
+}
+ 
+@ARTICLE{xiao2015using,
+  title={Using Spearman's correlation coefficients for exploratory data analysis on big dataset},
+  author={Xiao, Chengwei and Ye, Jiaqi and Esteves, Rui M{\'a}ximo and Rong, Chunming},
+  journal={Concurrency and Computation: Practice and Experience},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+
+ 
+@inproceedings{salvador2004determining,
+  title={Determining the number of clusters/segments in hierarchical clustering/segmentation algorithms},
+  author={Salvador, Stan and Chan, Philip},
+  booktitle={Tools with Artificial Intelligence, 2004. ICTAI 2004. 16th IEEE International Conference on},
+  pages={576--584},
+  year={2004},
+  organization={IEEE}
+}
+ 
+@inproceedings{pobiedina2013ranking,
+  title={Ranking factors of team success},
+  author={Pobiedina, Nataliia and Neidhardt, Julia and Calatrava Moreno, Maria del Carmen and Werthner, Hannes},
+  booktitle={Proceedings of the 22nd International Conference on World Wide Web},
+  pages={1185--1194},
+  year={2013},
+  organization={ACM}
+}
+
+@inproceedings{park2014social,
+  title={Social network analysis of high-level players in multiplayer online battle arena game},
+  author={Park, Hyunsoo and Kim, Kyung-Joong},
+  booktitle={International Conference on Social Informatics},
+  pages={223--226},
+  year={2014},
+  organization={Springer}
+}
+
+@inproceedings{leavitt2016ping,
+  title={Ping to win?: Non-verbal communication and team performance in competitive online multiplayer games},
+  author={Leavitt, Alex and Keegan, Brian C and Clark, Joshua},
+  booktitle={Proceedings of the 2016 CHI Conference on Human Factors in Computing Systems},
+  pages={4337--4350},
+  year={2016},
+  organization={ACM}
+}
+
+@inproceedings{claypool2015surrender,
+  title={Surrender at 20? Matchmaking in league of legends},
+  author={Claypool, Mark and Decelle, Jonathan and Hall, Gabriel and O'Donnell, Lindsay},
+  booktitle={Games Entertainment Media Conference (GEM), 2015 IEEE},
+  pages={1--4},
+  year={2015},
+  organization={IEEE}
+}
+ 
+@ARTICLE{buchan2016qualitative,
+  title={A qualitative exploration of factors affecting group cohesion and team play in multiplayer online battle arenas (mobas)},
+  author={Buchan, Alexandra and Taylor, Jacqui},
+  journal={The Computer Games Journal},
+  volume={5},
+  number={1-2},
+  pages={65--89},
+  year={2016},
+  publisher={Springer}
+}
+ 
+
+
+@techreport{edge2013predicting,
+  title={Predicting Player Churn in Multiplayer Games using Goal-Weighted Empowerment},
+  author={Edge, Robert},
+  year={2013},
+  institution={Technical Report 13-024}
+}
+ 
+@techreport{agarwala2014learning,
+  title={Learning Dota 2 Team Compositions},
+  author={Agarwala, Atish and Pearce, Michael},
+  year={2014},
+  institution={tech. rep., Stanford University}
+}
+
+@techreport{kinkade2015dota,
+  title={DOTA 2 Win Prediction},
+  author={Kinkade, Nicholas and Jolla, L and Lim, K},
+  year={2015},
+  institution={tech. rep., University of California San Diego}
+}
+ 
+@techreport{kalyanaraman2014win,
+  title={To win or not to win? A prediction model to determine the outcome of a DotA2 match},
+  author={Kalyanaraman, K},
+  year={2014},
+  institution={Technical report, University of California San Diego}
+}
+ 
+@misc{johansson2015result,
+  title={Result Prediction by Mining Replays in Dota 2},
+  author={Johansson, Filip and Wikstr{\"o}m, Jesper},
+  year={2015}
+}
+ 
+@inproceedings{schubert2016esports,
+  title={Esports analytics through encounter detection},
+  author={Schubert, Matthias and Drachen, Anders and Mahlmann, Tobias},
+  booktitle={Proceedings of the MIT Sloan Sports Analytics Conference},
+  year={2016}
+}
+ 
+@inproceedings{eggert2015classification,
+  title={Classification of player roles in the team-based multi-player game dota 2},
+  author={Eggert, Christoph and Herrlich, Marc and Smeddinck, Jan and Malaka, Rainer},
+  booktitle={International Conference on Entertainment Computing},
+  pages={112-125},
+  year={2015},
+  organization={Springer}
+}
+ 
+@ARTICLE{kim2015efficiently,
+  title={Efficiently detecting outlying behavior in video-game players},
+  author={Kim, Young Bin and Kang, Shin Jin and Lee, Sang Hyeok and Jung, Jang Young and Kam, Hyeong Ryeol and Lee, Jung and Kim, Young Sun and Lee, Joonsoo and Kim, Chang Hun},
+  journal={PeerJ},
+  volume={3},
+  pages={e1502},
+  year={2015},
+  publisher={PeerJ Inc.}
+}
+ 
+@inproceedings{cavadenti2016did,
+  title={What Did I Do Wrong in My MOBA Game? Mining Patterns Discriminating Deviant Behaviours},
+  author={Cavadenti, Olivier and Codocedo, Victor and Boulicaut, Jean-Fran{\c{c}}ois and Kaytoue, Mehdi},
+  booktitle={Data Science and Advanced Analytics (DSAA), 2016 IEEE International Conference on},
+  pages={662-671},
+  year={2016},
+  organization={IEEE}
+}
+ 
+@inproceedings{guo2012analysis,
+  title={An analysis of online match-based games},
+  author={Guo, Yong and Shen, Siqi and Visser, Otto and Iosup, Alexandru},
+  booktitle={Haptic Audio Visual Environments and Games (HAVE), 2012 IEEE International Workshop on},
+  pages={134-139},
+  year={2012},
+  organization={IEEE}
+}
+ 
+@ARTICLE{buchan2016qualitative,
+  title={A qualitative exploration of factors affecting group cohesion and team play in multiplayer online battle arenas (mobas)},
+  author={Buchan, Alexandra and Taylor, Jacqui},
+  journal={The Computer Games Journal},
+  volume={5},
+  number={1-2},
+  pages={65-89},
+  year={2016},
+  publisher={Springer}
+}
+ 
+@inproceedings{neidhardt2015team,
+  title={Team vs. Team: Success Factors in a Multiplayer Online Battle Arena Game},
+  author={Neidhardt, Julia and Huang, Yun and Contractor, Noshir},
+  booktitle={Academy of Management Proceedings},
+  volume={2015},
+  number={1},
+  pages={18725},
+  year={2015},
+  organization={Academy of Management}
+}
+
+@techreport{conley2013does,
+  title={How does he saw me? A recommendation engine for picking heroes in Dota 2},
+  author={Conley, Kevin and Perry, Daniel},
+  year={2013}
+  institution={tech. rep., Stanford University}
 }
