data mining - scratch

--- a/main_mestrado.tex
+++ b/main_mestrado.tex
@@ -16,6 +16,7 @@
 
 \usepackage{booktabs} % For formal tables
 \usepackage[inline]{enumitem}
+\usepackage{caption}
 %-------------------------- Para usar acentuacaoo em sistemas ISO8859-1 ------------------------------------
 % Se estiver usando o Microsoft Windows ou linux com essa codificacao, descomente essa linhas abaixo
 % e comente as linhas referentes ao UTF8
@@ -62,7 +63,7 @@ showstringspaces=false
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\Titulo{Caracterização de Perfis de Comportamento de Equipes Bem-sucedidas em League of Legends}
+\Titulo{Caracterização de Perfis de Comportamento de Equipes em League of Legends}
 \Autor{Fernando Felix do Nascimento Junior}
 \Data{01/06/2007}
 \Area{Ciência da Computação}
