--- a/ref.bib
+++ b/ref.bib
@@ -1,3 +1,17 @@
+@book{aggarwal2015data,
+  title={Data mining: the textbook},
+  author={Aggarwal, Charu C},
+  year={2015},
+  publisher={Springer}
+}
+
+@book{el2016game,
+  title={Game analytics},
+  author={El-Nasr, Magy Seif and Drachen, Anders and Canossa, Alessandro},
+  year={2016},
+  publisher={Springer}
+}
+
 @article{shim2014decision,
   title={Decision support of bad player identification in moba games using pagerank based evidence accumulation and normal distribution based confidence interval},
   author={Shim, Jae Youn and Kim, Tae Hyun and Kim, Seong Whan},
